@@ -81,7 +81,10 @@ C-API
 Library
 -------
 
-- Issue #6589: cleanup asyncore.socket_map in case smtpd.SMTPServer constructor 
+- Issue #7673: Fix security vulnerability (CVE-2010-2089) in the audioop
+  module, ensure that the input string length is a multiple of the frame size
+
+- Issue #6589: cleanup asyncore.socket_map in case smtpd.SMTPServer constructor
   raises an exception.
 
 - Issue #9125: Add recognition of 'except ... as ...' syntax to parser module.
